[package]
name = "linux-dhcp-forwarder"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A DHCP packet forwarder that captures DHCP requests and sends copies to remote servers for informational purposes"
license = "MIT OR Apache-2.0"

[dependencies]
pcap = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
socket2 = "0.5"
